--- a/UnityProjectLauncher/UnityProjectLauncher.csproj
+++ b/UnityProjectLauncher/UnityProjectLauncher.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <ApplicationIcon>unityplayer64.ico</ApplicationIcon>
     <Authors>Michael Meier</Authors>
     <Company>Meier-Digital</Company>
@@ -11,6 +11,7 @@
     <PackageProjectUrl>https://www.meier-digital.com</PackageProjectUrl>
     <PackageIcon>UnityPlayerIcon.png</PackageIcon>
     <SignAssembly>true</SignAssembly>
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
   </PropertyGroup>
 
   <ItemGroup>
